--- a/Foodgram/app/src/main/AndroidManifest.xml
+++ b/Foodgram/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity android:name=".Register"
             android:exported="true">
         </activity>
+        <activity android:name=".BottomNav"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
