--- a/Foodgram/app/src/main/AndroidManifest.xml
+++ b/Foodgram/app/src/main/AndroidManifest.xml
@@ -13,21 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodgram"
         tools:targetApi="31">
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".RegisterActivity"
-            android:exported="true">
-        </activity>
-
-        <activity android:name=".BottomNav"
-            android:exported="true">
-        </activity>
-
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".BottomNav"
+            android:exported="true"></activity>
     </application>
+
 </manifest>
