--- a/Foodgram/app/build.gradle
+++ b/Foodgram/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.google.ar.sceneform:filament-android:1.17.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
