Fix Bugs, Daymode, toolbar, bottomsheet
Auto Daymode remove darkmode
Bottom sheet for post settings
back button toolbar and title

--- a/Foodgram/app/src/main/AndroidManifest.xml
+++ b/Foodgram/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.foodgram" >
 
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -40,6 +41,10 @@
         <activity
             android:name=".Fragment.BottomNav"
             android:exported="true" />
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
