--- a/Foodgram/app/build.gradle
+++ b/Foodgram/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.google.ar.sceneform:filament-android:1.17.1'
     implementation 'com.github.yalantis:ucrop:2.2.6-native'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
