--- a/Foodgram/app/build.gradle
+++ b/Foodgram/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
 }
