--- a/Foodgram/app/src/main/AndroidManifest.xml
+++ b/Foodgram/app/src/main/AndroidManifest.xml
@@ -19,7 +19,16 @@
         android:theme="@style/Theme.Foodgram"
         tools:targetApi="31">
         <activity
-            android:name=".PostDetail"
+            android:name=".LikesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookmarkActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PostDetailActivity"
             android:exported="false" />
         <activity
             android:name=".CommentsActivity"
